--- a/src/view/JDlgLogar.form
+++ b/src/view/JDlgLogar.form
@@ -64,7 +64,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jTxtUser">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Usuario"/>
+        <Property name="text" type="java.lang.String" value="Apelido"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTxtUsuario">
